# conan_cmakedeps

./: .gitignore  README.md  notes.org
engine/: CMakeLists.txt  conanfile.py
engine/src/: engine.cpp
engine/test/: CMakeLists.txt  test_main.cpp
engine/test_package/: CMakeLists.txt
game/: CMakeLists.txt  conanfile.py
game/src/: game.cpp  game.h  main.cpp
game/test_package/: conanfile.py
hibakereses/: game_cmake_deps_shared.dot  game_cmake_deps_static.dot  game_deps_shared.html  game_deps_static.html
